# ruyi-backend

./: .editorconfig  .mailmap  CONTRIBUTING.md  CONTRIBUTING.zh.md  Dockerfile  README.md  example.env  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  pr.yml
examples/: example.env
examples/systemd/: ruyi-backend-process-telemetry.service  ruyi-backend-process-telemetry.timer  ruyi-ci-sync-release.service
ruyi_backend/app/: __init__.py  admin.py  frontend.py  lifespan.py  misc.py  news.py  oauth2.py  releases.py  root.py  telemetry.py
ruyi_backend/cache/: __init__.py  store.py
ruyi_backend/cli/: __init__.py  cmd_password.py  cmd_sync_releases.py
ruyi_backend/components/: auth.py  frontend_dashboard_processor.py  github_stats.py  news_item_processor.py  news_items.py  pypi_stats.py  telemetry_processor.py
ruyi_backend/config/: __init__.py  defaults.py  env.py
ruyi_backend/db/: conn.py  schema.py
ruyi_backend/es/: __init__.py
ruyi_backend/gh/: __init__.py
ruyi_backend/schema/: admin.py  client_telemetry.py  frontend.py  releases.py
scripts/: ruyi-backend-mysql-main  test-build-image.sh
scripts/cron/: ruyi-backend-process-telemetry.sh
sql/: ruyisdk-db-schema.sql
stubs/fastapi_health/: __init__.pyi  route.pyi
stubs/pypistats/: __init__.pyi  cli.pyi
tests/: test_db_conn.py  test_frontend_dashboard_processor.py  test_releases.py  test_smoke.py  test_telemetry.py
tests/fixtures/: __init__.py  github-release-query-graphql.0.json  github-release-query-graphql.NTA.json  github-release-stats-cache.json
