[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "ruyi-backend"
version = "0.0.0"
description = "Backend service for RuyiSDK"
keywords = ["ruyi", "ruyisdk"]
license = { file = "LICENSE" }
readme = "README.md"
authors = [
  { name = "WANG Xuerui", email = "wangxuerui@iscas.ac.cn" },
]
include = ["ruyi_backend/py.typed"]
requires-python = ">=3.12,<4"  # because fastapi-health requires the "<4" part
dependencies = [
  "fastapi[standard] (>=0.115.0, <0.116.0)",
  "fastapi-health (>=0.4.0, <0.5.0)",
  "pydantic (>=2.9.2, <3.0.0)",
  "pydantic-settings (>=2.7.0, <3.0.0)",
  "sqlalchemy[aiosqlite,asyncio,asyncmy,postgresql-asyncpg] (>=2.0.36, <3.0.0)",
  "elasticsearch[async] (>=8.17.1,<9.0.0)",
  "redis[hiredis] (>=5.2.1,<6.0.0)",
]

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
pytest = "^8.2.2"
ruff = "^0.8.1"

# test deps
httpx = "*"


[tool.black]
target-version = ['py312']


[tool.mypy]
files = ["ruyi_backend"]
show_error_codes = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]

# https://github.com/eyeseast/python-frontmatter/issues/112
# https://github.com/python/mypy/issues/8545
# have to supply the typing info until upstream releases a new version with
# the py.typed marker included
mypy_path = "./stubs"

plugins = [
  "pydantic.mypy",
]


[tool.pylic]
safe_licenses = [
  "Apache Software License",
  "BSD License",
  "ISC License (ISCL)",
  "MIT License",
  "Mozilla Public License 2.0 (MPL 2.0)", # needs mention in license notices
  "Python Software Foundation License",
  "The Unlicense (Unlicense)",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
